[package]
name = "funmap_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "funmap"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.11"
csv = "1.3.0"
pyo3 = "0.22.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde-pickle = "1.1.1"
